Fixed spacing, added padding to each one of the article.

--- a/scss/_communication.scss
+++ b/scss/_communication.scss
@@ -24,6 +24,10 @@
 }
 
 @media (min-width: 600px) {
+    .huddle__main_iformation_communication {
+        padding: 80px;
+    }
+    
     .huddle__main_information_navigation_container {
         display: flex;
         flex-direction: row;
