--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -36,7 +36,6 @@
     padding-inline: 32px;
     border-radius: 5px;
     border: none;
-    width: 86%;
 }
 
 .huddle__footer_newsletter_button {
@@ -116,7 +115,7 @@
     }
 
     .huddle__footer_container > * {
-        max-width: 1000px;
+        max-width: 1200px;
         margin-inline-start: auto;
         margin-inline-end: auto;
     }
@@ -136,11 +135,28 @@
         margin-block-start: 64px;
     }
 
-    .huddle__footer_newsletter_input {
-        width: 85%;
+    .huddle__footer_newsletter_form {
+        display: flex;
+        flex-direction: column;
+        // justify-content: space-between;
     }
 
     .huddle__footer_newsletter_button {
-        margin-inline-start: 50%;
+        margin-block-start: 16px;
+        margin-inline-start: 0px;
+        width: 150px;
+    }
+}
+
+@media (min-width: 1000px) {
+    .huddle__footer_newsletter_form {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+    }
+
+    .huddle__footer_newsletter_button {
+        margin-block-start: 0px;
+        margin-inline-start: 0px;
     }
 }
