--- a/scss/_main_header.scss
+++ b/scss/_main_header.scss
@@ -28,13 +28,12 @@
 }
 
 @media (min-width: 600px) {
-    .huddle__main {
-        // max-width: 1000px;
-        // margin-inline-start: auto;
-        // margin-inline-end: auto;
-    }
-
     .huddle__main_header {
         font-size: 32px;
+    }
+
+    .huddle__main_heading,
+    .huddle__main_details {
+        padding-inline: 80px;
     }
 }
